tdf#96475 sort error result between text and empty cell

Error results weren't handled at all and sorted same as numeric 0, which
due to "stable sort" resulted in arbitrary looking sort order if 0
values or results where included.

Change-Id: Ib7c516b57ea92bc5b813f448d9c2bb5491e43940